--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,37 +9,43 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="338dp"
-        android:layout_height="328dp"
-        app:layout_constraintHorizontal_bias="0.505"
+        android:layout_width="399dp"
+        android:layout_height="363dp"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/logo"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="232dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/background_light"
-        android:text="CHECK AVAILIBILITY"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="447dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:ignore="MissingConstraints"/>
+        tools:layout_editor_absoluteY="-25dp" />
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
+        android:background="#1e90ff"
         android:ems="10"
-        android:inputType="textMultiLine"
         android:hint="Spotify URI"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="342dp"
+        android:inputType="textMultiLine"
+        android:textColorHint="#ffffff"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@id/imageView"
+        app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:ignore="MissingConstraints"/>
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="363dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        android:background="#1e90ff"
+        android:text="CHECK AVAILIBILITY"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
