URI parser added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/link"
         android:layout_width="337dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
